2007-07-28  Per Cederqvist  <ceder@lysator.liu.se>

	New command: "View URL".

	* commands2.el (kom-view-url-in-text): New command.

	* vars.el.in (lyskom-commands): Added kom-view-url-in-text.

	* swedish-strings.el (lyskom-command): Add kom-view-url-in-text as
	"Visa URL".
	(lyskom-sv-mode-map): Bind "vu" to "Visa URL".

	* english-strings.el (lyskom-command): Add kom-view-url-in-text as
	"View URL".
	(lyskom-en-view-prefix): New prefix, bound to "v".
	(lyskom-en-mode-map): Bind "vu" to "View URL".

2007-07-20  Hans Eric Svensson  <eric+lyskom@lysator.liu.se>
	
	* view-text.el (lyskom-follow-comments): Adjusted to take into
	account that text-read-p doesn't know if a text *should* be read,
	it only only knows if a text *is marked* as read.

2007-07-14  Per Cederqvist  <ceder@lysator.liu.se>

	Make sure all elisp files end in a newline.
	* utilities.el: Add a newline at end of file.
	* review.el: Add a newline at end of file.
	* Makefile (check-eof): New target.  Check that all elisp files
	ends in a newline, to avoid strange code in the concatenated
	lyskom.el.
	(check): Depend on check-eof.

2007-07-11    <David Byers@GULAG>

	* commands2.el (lyskom-help-get-keylist): Changed name of variable
	list to keylist. In Emacs 22.1, map-keymap-internal (which is
	called by map-keymap) uses "list" as an internal variable.

	Fix bug 1262:
	* edit-text.el (lyskom-edit-move-recipients): Don't alter
	recipients that are letterboxes.

	Fix bug 281:
	* vars.el.in (lyskom-format-special): Cover all IANA mime type
	allocations, and include fallback for anything unknown.

	* lyskom-rest.el (lyskom-text-stat-content-type): New function.
	(lyskom-format-audio): New function.
	(lyskom-format-video): New function.
	(lyskom-format-multipart): New function.
	(lyskom-format-message): New function.
	(lyskom-format-model): New function.
	(lyskom-format-application): New function.
	(lyskom-format-image): Show content type when failing to show image.
	(lyskom-format-unknown): New function.
