@@ -1,3 +1,13 @@
+2007-08-01  Per Cederqvist  <ceder@ingate.com>
+
+	Fixed typos in docstrings.
+
+	* lyskom-rest.el (kom-go-to-pri-session): Fixed typo in
+	docstring.
+
+	* vars.el.in (kom-show-where-and-what): Fixed typo in docstring.
+	(kom-show-since-and-when): Ditto.
+
 2007-07-28  Per Cederqvist  <ceder@lysator.liu.se>
 
 	New command: "View URL".
